# demo_auth_system

./: .gitignore  pyproject.toml
.code_quality/: .pylintrc
src/: dependencies.py  main.py  settings.py
src/libs/aws/: auth.py
src/routes/: __init__.py  prefixes.py
src/routes/v1/: auth.py
src/schemas/: auth.py  base.py
src/services/v1/: auth.py
